@@ -1,4 +1,4 @@
-(defproject manifold "0.1.0-SNAPSHOT"
+(defproject manifold "0.1.0-alpha4"
   :description "a compatibility layer for event-driven abstractions"
   :license {:name "MIT License"
             :url "http://opensource.org/licenses/MIT"}
@@ -17,4 +17,8 @@
   :codox {:writer codox-md.writer/write-docs
           :include [manifold.deferred manifold.stream manifold.time manifold.bus]}
   :global-vars {*warn-on-reflection* true}
-  :jvm-opts ["-server"])
+  :jvm-opts ["-server"
+             "-XX:+UseConcMarkSweepGC"
+             "-Xmx2g"
+             "-XX:NewSize=1g"
+             "-XX:MaxPermSize=256m"])
